--- a/portfolio-store/src/App.css
+++ b/portfolio-store/src/App.css
@@ -1,10 +1,45 @@
+*,body{
+  padding: 0;
+  margin: 0;
+
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar{
+  position: absolute;
+  padding: 0.2rem;
+  margin: 0;
+  width: 100%;
+  height: 51px;
+}
+
+.logo{
+  position: absolute;
+  left: 25px;
+  margin: 0;
+  padding: 0;
+}
+.shopping-cart-container{
+  position: absolute;
+  right: 25%;
+  width: 50px;
+  height: 50px;
+}
+
+.shopping-cart{
+width: 37px;
+height: 50px;
+}
+
+.hamburger{
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  width: 48px;
+  height: 35px;
+  margin-right: 1vw;
 }
 
 @media (prefers-reduced-motion: no-preference) {
