--- a/portfolio-store/src/App.css
+++ b/portfolio-store/src/App.css
@@ -8,38 +8,106 @@
 }
 
 .navbar{
-  position: absolute;
-  padding: 0.2rem;
+  position: absolute; /*Mabye sticky later */
+  padding: 0;
+  margin: 0;
   margin: 0;
   width: 100%;
-  height: 51px;
+  height: 61px;
+  background-color: #171717;
 }
 
 .logo{
+  top: 0.6rem;
   position: absolute;
   left: 25px;
   margin: 0;
   padding: 0;
 }
 .shopping-cart-container{
+  top: 0.6rem;
   position: absolute;
-  right: 25%;
-  width: 50px;
-  height: 50px;
+  right: 23%;
+  width: 2.8rem;
+  height: 2.3rem;
 }
 
 .shopping-cart{
-width: 37px;
-height: 50px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.burger-container{
+  top: 0.6rem;
+  right: 1.2rem;
+  width: 2.5rem;
+  height: 2.3rem;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  border-radius: 0;
+}
+
+.burger-checkbox{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  right: -2px;
+  top: -1px;
+  width: 2.8rem;
+  height: 2.4rem;
+  transition: background-color 0.3s ease;
+  opacity: 0.6;
+  cursor: pointer;
+  z-index: 3;
 }
 
 .hamburger{
+  padding: 0;
+  margin: 0;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.hamburger-menu{
+  display: none;
+}
+
+#burger-checkbox:checked ~ .hamburger-menu {
   position: absolute;
-  top: 10px;
-  right: 30px;
-  width: 48px;
-  height: 35px;
-  margin-right: 1vw;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+  top: -1rem;
+  width: 379px;
+  height: 100vh;
+  left: -20rem;
+  background-color: rgb(255, 255, 255);
+  opacity: 0.8;
+
+}
+
+#burger-checkbox:checked ~ .hamburger-menu .hamburger-menu-link{
+  margin: 1rem;
+  padding: 1.5vh;
+}
+
+#burger-checkbox:checked ~ .hamburger-menu .hamburger-menu-link-container:first-of-type{
+margin-top: 5rem;
+}
+
+.hamburger-menu-link-container{
+  background-color: red;
+  padding: 1rem;
+}
+
+.hamburger-menu-link-container{
+  flex-direction: row;
 }
 
 @media (prefers-reduced-motion: no-preference) {
