--- a/portfolio-store/src/App.css
+++ b/portfolio-store/src/App.css
@@ -58,7 +58,7 @@
   width: 2.8rem;
   height: 2.4rem;
   transition: background-color 0.3s ease;
-  opacity: 0.6;
+  opacity: 0;
   cursor: pointer;
   z-index: 3;
 }
@@ -93,21 +93,59 @@
 }
 
 #burger-checkbox:checked ~ .hamburger-menu .hamburger-menu-link{
-  margin: 1rem;
-  padding: 1.5vh;
+  margin: 0;
+  padding: 0;
+  width: 60%;
+  left: 7rem;
+  position: absolute;
+ 
 }
 
 #burger-checkbox:checked ~ .hamburger-menu .hamburger-menu-link-container:first-of-type{
-margin-top: 5rem;
+margin-top: 6rem;
 }
 
 .hamburger-menu-link-container{
-  background-color: red;
-  padding: 1rem;
+  margin-top: 2vh;
+  width: auto;
+  height: 4.5rem;
+  justify-content: center; /* Center horizontally */
+  align-items: center;    /* Center vertically */
+}
+
+#burger-checkbox:checked:after{
+  opacity: 0;
+}
+
+#burger-checkbox:checked ~ .hamburger-menu .hamburger-menu-link-container{
+ /* border: 4px solid rgb(46, 0, 252); */
+  
+}
+
+.hamburger-menu-home{
+  position: absolute;
+  left: 3rem;
 }
 
 .hamburger-menu-link-container{
   flex-direction: row;
+ 
+}
+
+.hamburger-menu-link{
+  font-size: 2.2rem;
+  text-align: left;
+  color: black;
+  text-decoration: none;
+  height: 6%;
+  font-weight: 300 bolder;
+  
+  
+ 
+}
+
+.hambruger-menu-home{
+  background-color: blue;
 }
 
 @media (prefers-reduced-motion: no-preference) {
