--- a/portfolio-store/src/App.css
+++ b/portfolio-store/src/App.css
@@ -6,7 +6,7 @@
 .App {
   text-align: center;
 }
-
+/*-------------------NAVBAR START------------------*/
 .navbar{
   position: absolute; /*Mabye sticky later */
   padding: 0;
@@ -14,7 +14,8 @@
   margin: 0;
   width: 100%;
   height: 61px;
-  background-color: #171717;
+ background-color: #171717; 
+  
 }
 
 .logo{
@@ -146,7 +147,105 @@ margin-top: 0rem;
   
  
 }
+/*-------------------NAVBAR ENDING------------------*/
 
+/*-------------------LANDING PAGE START------------------*/
+.background1{
+  width: 100%;
+  height: 100vh;
+    object-fit: fill;
+  /* or
+    object-fit: cover; */
+  background-color: red;
+}
+
+.welcome{
+  top: 10%;
+  left:  5%;
+  line-height: 4rem;
+  font-size: 3rem;
+  font-weight: bold;
+  position: absolute;
+  color: white;
+  text-shadow: black 2px 2px 2px;
+}
+
+.landing-page-container h2{
+font-size: 2rem;
+text-shadow: black 2px 2px 2px;
+text-decoration: underline;
+}
+
+.linkedin-container {
+  position: absolute;
+  width: 15rem;
+  height: 12rem;
+  background-color: rgb(255, 255, 255);
+  top: 50%;
+  left: 18%;
+  box-shadow: 0 1vh 20px 5px black;
+}
+
+.linkedin-picture{
+  position: relative;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
+  bottom: 2rem;
+    width: 100%;
+    height: 89%;
+      object-fit:cover;
+      justify-content: center;
+     
+}
+
+.linkedin-picture h4{
+  margin-top: -1rem;
+}
+
+.connect-button{
+  display: inline-block;
+  background-color: #166DCF;
+  color: white;
+  margin-top: 4%;
+  width: 60%;
+  height: 22%;
+  font-size: 1.45rem;
+  justify-content: center;
+  border-radius: 20px;
+  box-shadow: 0 5px 20px 1px black;
+}
+
+.explore-button{
+  margin-top: 4rem;
+  display: inline-block;
+  background-color: #16cf79;
+  width: 80%;
+  height: 30%;
+  border-radius: 17px;
+  justify-content: center;
+  text-decoration: none;
+  text-align: center;
+  box-shadow: 0 1vh 20px 5px black;
+}
+
+.connect-link{
+  text-decoration: none;
+  font-weight:400;
+ color: aliceblue;
+}
+
+.explore-link{
+  position: relative;
+ top: 2vh;
+ font-size: 1.1rem;
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ font-weight: bold;
+ color: aliceblue;
+ text-decoration: none;
+}
+
+/*-------------------LANDING PAGE ENDING------------------*/
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
