margin-top changed for linkedin container

--- a/portfolio-store/src/App.css
+++ b/portfolio-store/src/App.css
@@ -183,6 +183,7 @@ text-decoration: underline;
   background-color: rgb(255, 255, 255);
   top: 50%;
   left: 18%;
+  margin-top: 5%;
   box-shadow: 0 1vh 20px 5px black;
 }
 
