--- a/portfolio-store/src/App.css
+++ b/portfolio-store/src/App.css
@@ -231,7 +231,7 @@ text-decoration: underline;
 }
 
 .connect-link{
-  margin-top: 1vh;
+  margin-top: 2rem;
   text-decoration: none;
   font-weight:400;
  color: aliceblue;
